--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ progress {
 }
 
 #petArea {
+  position: relative;
   width: 100%;
   height: 200px;
   margin: 0 auto 20px auto;
@@ -130,6 +131,13 @@ progress {
   background-color: #eee;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+#petContainer {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #petImg {
