--- a/styles.css
+++ b/styles.css
@@ -224,3 +224,12 @@ button img {
 button img.coinImage {
   height: 15px;
 }
+
+.poop {
+  position: absolute;
+  bottom: 0;
+  /* Randomly position the poop along the x-axis */
+  left: calc(100% * var(--random-x));
+  width: 50px;
+  height: 50px;
+}
