--- a/styles.css
+++ b/styles.css
@@ -233,3 +233,23 @@ button img.coinImage {
   width: 50px;
   height: 50px;
 }
+
+.game {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#coinSmashCoin {
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
