--- a/css/styles.css
+++ b/css/styles.css
@@ -369,3 +369,26 @@ button img.coinImage {
   padding: 5px;
   border-radius: 3px;
 }
+
+.food-page {
+  display: none;
+}
+
+#foodPage1 {
+  display: block;
+}
+
+#prevFoodPage,
+#nextFoodPage {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 10px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+#prevFoodPage:disabled,
+#nextFoodPage:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
